@@ -13,6 +13,7 @@ Changes in 3.1.7
        escalation in afpd processes
 * FIX: afpd: ACL related error messages, now logged with loglevel
        debug instead of error
+* FIX: Spotlight: searching in user homes, bug #543
 
 Changes in 3.1.6
 ================
